# Negotium

./: AnimatedGraphicsItem.h  AppWideVariables.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CodeHighlighter.cpp  CodeHighlighter.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GraphicalGameObject.h  GuideView.cpp  GuideView.h  LevelSelector.cpp  LevelSelector.h  MDISubWindow.cpp  MDISubWindow.h  MainWindow.cpp  MainWindow.h  Output.cpp  Output.h  PyAPI.cpp  PyAPI.h  README.md  SavesFileWorker.cpp  SavesFileWorker.h  TODO  main.cpp  resources.qrc
Resources/: index.html  style.scss
Resources/Levels/: level-Debug.xml  level-Debug00.clvldata  level-Debug00.nlvldata  level-Debug01.clvldata  level-Debug01.nlvldata  level-Debug02.clvldata  level-Debug03.clvldata
Resources/md/: test.md
